--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,14 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+
+// Additional
+$text-color: #212121;
+$white: #e9e9e9;
+$light-grey-background: #F5f5f5;
+$grey-background: #535353;
+$separator-color: #CDCDCD;
+$gutter: 30px;
+
+
