--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,5 +8,8 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Reset
-@import 'node_modules/reset';
+@import "node_modules/reset-css/sass/_reset.scss";
 
+//Default css
+@import "defo";
+@import "responsive";
