--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,4 +6,30 @@
     -webkit-text-fill-color: transparent;
 }
 
+.linking {
 
+}
+
+#product-image {
+    width: 500px;
+    height: 100%;
+}
+
+
+.addToCart{
+    border: 1px solid black;
+    margin-top: 40px;
+    padding: 15px 40px;
+    color: black !important
+}
+
+.addToCart:hover {
+    background: gray;
+    color: white;
+    text-decoration: none;
+    letter-spacing: 5px;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+    transition: all 0.4s ease 0s;
+}
